package springcore.tickets.model;

public enum Resolution {
  SOLVED,
  NOT_SOLVED
}
