package springcore.tickets.model;

public enum TicketStatus {
  OPEN,
  CLOSED
}
